ray_short/transformer_tuning/trial_a3c94_00151/error.txt
Failure # 1 (occurred at 2025-03-18_10-45-44)
The actor died unexpectedly before finishing this task.
	class_name: ImplicitFunc
	actor_id: 4cfa32a6e064e06bd3f0dd9701000000
	pid: 33304
	namespace: 6eea39d6-62bc-4cf0-9830-52baf40338a5
	ip: 127.0.0.1
The actor is dead because its worker process has died. Worker exit type: SYSTEM_ERROR Worker exit detail: Worker exits unexpectedly. Worker exits with an exit code None. Traceback (most recent call last):
  File "python\\ray\\_raylet.pyx", line 1877, in ray._raylet.execute_task
  File "python\\ray\\_raylet.pyx", line 1979, in ray._raylet.execute_task
  File "python\\ray\\_raylet.pyx", line 1883, in ray._raylet.execute_task
  File "python\\ray\\_raylet.pyx", line 1824, in ray._raylet.execute_task.function_executor
  File "C:\Users\Admin\AppData\Local\Programs\Python\Python312\Lib\site-packages\ray\_private\function_manager.py", line 696, in actor_method_executor
    return method(__ray_actor, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Admin\AppData\Local\Programs\Python\Python312\Lib\site-packages\ray\_private\function_manager.py", line 608, in temporary_actor_method
    raise RuntimeError(
RuntimeError: The actor with name ImplicitFunc failed to import on the worker. This may be because needed library dependencies are not installed in the worker environment:

Traceback (most recent call last):
  File "C:\Users\Admin\AppData\Local\Programs\Python\Python312\Lib\site-packages\ray\_private\function_manager.py", line 647, in _load_actor_class_from_gcs
    actor_class = pickle.loads(pickled_class)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Admin\trading_bot\models\transformer_trainer.py", line 454
    def train_with_ray_tune(self, config, checkpoint_dir=None, data=None):
                                                                          ^
IndentationError: unindent does not match any outer indentation level


During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "python\\ray\\_raylet.pyx", line 2276, in ray._raylet.task_execution_handler
  File "python\\ray\\_raylet.pyx", line 2172, in ray._raylet.execute_task_with_cancellation_handler
  File "python\\ray\\_raylet.pyx", line 1826, in ray._raylet.execute_task
  File "python\\ray\\_raylet.pyx", line 1827, in ray._raylet.execute_task
  File "python\\ray\\_raylet.pyx", line 2066, in ray._raylet.execute_task
  File "python\\ray\\_raylet.pyx", line 1057, in ray._raylet.store_task_errors
  File "C:\Users\Admin\AppData\Local\Programs\Python\Python312\Lib\site-packages\ray\_private\function_manager.py", line 608, in temporary_actor_method
    raise RuntimeError(
RuntimeError: The actor with name ImplicitFunc failed to import on the worker. This may be because needed library dependencies are not installed in the worker environment:

Traceback (most recent call last):
  File "C:\Users\Admin\AppData\Local\Programs\Python\Python312\Lib\site-packages\ray\_private\function_manager.py", line 647, in _load_actor_class_from_gcs
    actor_class = pickle.loads(pickled_class)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Admin\trading_bot\models\transformer_trainer.py", line 454
    def train_with_ray_tune(self, config, checkpoint_dir=None, data=None):
                                                                          ^
IndentationError: unindent does not match any outer indentation level

An unexpected internal error occurred while the worker was executing a task.
